[metadata]
name = twoopstracker
version = file: VERSION.txt
url = https://github.com/CodeForAfrica/TwoopsTracker
project_urls =
    Source = https://github.com/CodeForAfrica/TwoopsTracker
author = Code for Africa
author_email = tech@codeforafrica.org
description = A tool that tracks what trolls are tweeting and records incase they deletes the tweets.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = track

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
max-line-length = 105
extend-ignore = E203, W503

[mypy]
exclude = venv
ignore_missing_imports=true
