[metadata]
url = https://github.com/CodeForAfrica/api
project_urls =
    Source = https://github.com/CodeForAfrica/api
author = Code for Africa
author_email = tech@codeforafrica.org
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
license = MIT
license_file = LICENSE
description = A public
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dj-cmd, django

[bdist_wheel]
universal = 1
