[metadata]
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 3.2
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
description = A public
long_description = file: README.md
long_description_content_type = text/markdown
keywords = dj-cmd, django

[bdist_wheel]
universal = 1
